# snowflake-health-showcase

./: .env.sample  .env.template  .gitignore  Makefile  README.md  pyproject.toml  requirements.txt  snowflake_connection.py
.github/workflows/: ci.yml
case_studies/: README.md
scripts/: fetch_cms_csv.sh
sql/analysis/: 00_smoke_test.sql.disabled
src/: db.py
